2001-08-31  Ulrik Haugen  <qha@lysator.liu.se>

	* review.el (kom-review-more): ignore prefix arg unless it's
	really there.

2001-08-25  Ulrik Haugen  <qha@lysator.liu.se>

	* commands1.el (lyskom-select-friends-from-who-list): change endp
	to null which is built in.

	* english-strings.el (lyskom-en-mode-map): moved "w l" to "w w",
	"w a" to "w p"

	* swedish-strings.el (lyskom-sv-mode-map): moved "v a" to "v n".

	* swedish-strings.el, english-strings.el (lyskom-command):
	Parenthesised kom-who-is-command-names.

2001-08-24  Ulrik Haugen  <qha@lysator.liu.se>

	* vars.el.in (lyskom-help-categories, lyskom-commands): added
	kom-who-is-on-and-friend.

	* swedish-strings.el (lyskom-help-strings): added
	kom-who-is-on-and-friend. 

2001-08-23  Ulrik Haugen  <qha@lysator.liu.se>

	* commands1.el (kom-who-is-on-and-friend,
	lyskom-select-friends-from-who-list): new commands.
	(lyskom-who-is-on-8, lyskom-who-is-on-9): new arg;
	show-friends-only.

	* english-strings.el, swedish-strings.el (lyskom-command): added
	kom-who-is-on-and-friend.

	* english-strings.el (lyskom-en-mode-map): kom-who-is-on is on
	"w l", kom-who-is-on-in-conference is on "w c",
	kom-who-is-present-in-conference is on "w a" and
	kom-who-is-on-and-friend is on "w f".

	* swedish-strings.el (lyskom-sv-mode-map): kom-who-is-on is on
	"v i", kom-who-is-on-in-conference is on "v m",
	kom-who-is-present-in-conference is on "v a" and
	kom-who-is-on-and-friend is on "v v".

2001-08-24  Per Cederqvist  <ceder@moria>

	* commands2.el (kom-is-person-member-of-conference): Differentiate
	between active and passive memberships.
	* english-strings.el, swedish-strings.el (lyskom-message): Added
	pers-is-passive-member-of-conf.

2001-08-22  Ulrik Haugen  <qha@lysator.liu.se>

	* lyskom-rest.el (lyskom-set-last-viewed): set lyskom-last-viewed
	to a marker in stead of an integer.
	(lyskom-trim-buffer): don't update
	lyskom-last-viewed since it's a marker now.

	* slow.el (lyskom-slow-start-of-line): see above.
